--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,14 @@
 $fuente-principal: 'Hind', sans-serif;
+$fuente-segunda: 'Biryani', sans-serif;
+$fuente-tercera: 'Prompt', sans-serif;
+
 $mapa-colores: (
     color-orange: orange,
     color-white: white,
+    color-red: #d30000,
+    color-green: rgb(3, 204, 20),
+    color-black: rgba(0, 0, 0, 0.514),
+    color-bordo:  rgb(105, 0, 0),    
+    color-naranjaClaro: rgb(233, 74, 0)
+
 )
