--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,187 +1,10 @@
 @import "fonts.scss";
 @import "variables.scss";
+@import "utilitarios.scss";
 @import "header.scss";
 @import "mainIndex.scss";
-@import "footer.scss";
 @import "nosotros.scss";
-@import "utilitarios.scss";
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.contenedorForm{
-    margin: 0;
-}
-
-  
-.formularioCompleto{
-    
-    align-items: center;
-    flex-direction: column;
-    padding: 50px 0;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.514);
-    border-radius: 0px;
-    margin: 0;
-    
-}
-
-.input{
-    font-family: 'Hind', sans-serif;
-    font-weight: lighter;
-    font-size: 1.2rem;
-    width: 400px;
-    border-radius: 5px;
-    
-
-}
-
-.textarea{
-    padding-bottom: 50px;
-    width: 600px;
-    resize: none;
-}
-
-.resetSend{
-    display: flex;
-    width: 300px;
-    align-items: center;
-    gap: 20px;
-    
-     
-}
-
-.limpiar{
-    font-family: $fuente-principal;
-    font-weight: bold;
-    font-size: 1.3rem;
-    background-color: rgb(211, 0, 0);
-    color: map-get($mapa-colores, white );
-    border-radius: 10px ;
-    padding: 20px;
-    text-transform: uppercase;
-
-    
-}
-.enviar{
-    font-family: $fuente-principal;
-    font-weight: bold;
-    font-size: 1.3rem;
-    background-color: rgb(3, 204, 20);
-    color:map-get($mapa-colores, white );
-    border-radius: 10px ;
-    padding: 20px;
-    text-transform: uppercase;
-}
-
-.contenedorBoton{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
-    gap: 10px;
-    
-}
-
-
-.divMaps{
-    
-    
-    padding-bottom: 40px;    
-    padding-top: 50px;
-}
-
-.maps{
-    height: 20vh;
-    width: 50%;
-    border-radius: 10px;
-    
-}
-
-/*GALERIA*/
-
-.tamanioCarrusel{
-    width: 60%;
-    padding-bottom: 50px;
-    margin: 0 auto;
-    
-}
-
-
-
-
-/*MEDIA QUERYS*/
-
-@media screen and (min-width: 250px) and (max-width: 884px){
-
-
-
-
-
-
-
-
-
-
-/*UNITE FORMULARIO RESPONSIVE*/
-
-.textarea{ 
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    
-}
-.input{
-    width: 300px;
-    
-}
-
-.nombreYApellido{
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    
-}
-
-.mailyTelefono{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.formularioCompleto{
-    background-color: transparent;
-}
-
-.maps{
-    width: 70%
-}
-.divMaps{
-    margin: 0;
-    margin-left: 10px;
-}
-
-/*GALERIA RESPONSIVE*/
-
-.tamanioCarrusel{
-    width: 100%;
-    padding-top: 30px;
-    
-    
-}
-
-
-
-}
+@import "colabora.scss";
+@import "unite.scss";
+@import "galeria.scss";
+@import "footer.scss";
