--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -7,6 +7,16 @@
     .cuartel{
         padding-bottom: 50px;
         padding-left: 50px;
+        .imagenCuartel{
+            animation-name: aparecer;
+            animation-duration: 2s;
+            animation-delay: 0.8;
+            animation-iteration-count: initial;
+
+        }
+        
+        
+        
     }
 .parrafosNosotros{
     margin: 0;
@@ -24,14 +34,32 @@
         span{
             color: map-get($mapa-colores, color-naranjaClaro );
             font-weight: 700;
+       
         }
     }
 }
 }
 
+@keyframes aparecer {
+    0%{
+        transform: translateX(-90px);
+        opacity: 0;
+        filter: blur(80%);
+    }
+    100%{
+        transform: translateX(0px);
+        opacity: 1;
+        filter: blur(0%);
+    }
+}
+
 /*NOSOTROS RESPONSIVE*/
 
 @media screen and (min-width: 250px) and (max-width: 884px){
+
+.backgroundMain{
+    margin: 0;
+}
 
 .contenedorParrafo{
     padding: 0;
@@ -40,12 +68,14 @@
         padding-left: 0;
         padding-right: 0;
         padding-bottom: 10px;
+        margin: 0;
         
             img{ 
                 width: 350px;
                 justify-content: center;
                 align-items: center;
                 margin-left: 0px;
+                padding-left: 20px;
                 margin: 0;
                 
             
