--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,7 @@
 $fuente-principal: 'Hind', sans-serif;
 $fuente-segunda: 'Biryani', sans-serif;
 $fuente-tercera: 'Prompt', sans-serif;
+$fuente-roboto: 'Roboto', sans-serif;
 
 $mapa-colores: (
     color-orange: orange,
