--- a/scss/_colabora.scss
+++ b/scss/_colabora.scss
@@ -26,8 +26,20 @@
 .anclaBotonMp{
     padding-right: 80px;
     padding-bottom: 50px;
+    
+        
     .botonMp{
         background-image: url(../assets/img/mercadopago.png);
+        animation-name: aparecerMp;
+            animation-duration: 2s;
+            animation-delay: 0.8;
+            animation-iteration-count: initial;
+        &:hover{ box-shadow: -2px 1px 21px 12px rgba(242,238,238,0.75);
+            -webkit-box-shadow: -2px 1px 21px 12px rgba(242,238,238,0.75);
+            -moz-box-shadow: -2px 1px 21px 12px rgba(242,238,238,0.75);}
+            &:active{box-shadow: -15px -1px 125px 30px rgba(117,43,43,0);
+                -webkit-box-shadow: -15px -1px 125px 30px rgba(117,43,43,0);
+                -moz-box-shadow: -15px -1px 125px 30px rgba(117,43,43,0);}
         
     }
     
@@ -37,12 +49,47 @@
     padding-bottom: 50px;
     .botonCafecito{
         background-image: url(../assets/img/cafecito.png);
+        animation-name: aparecerCa;
+            animation-duration: 2s;
+            animation-delay: 0.8;
+            animation-iteration-count: initial;
+        &:hover{ box-shadow: -2px 1px 21px 12px rgba(242,238,238,0.75);
+            -webkit-box-shadow: -2px 1px 21px 12px rgba(242,238,238,0.75);
+            -moz-box-shadow: -2px 1px 21px 12px rgba(242,238,238,0.75);}
+            &:active{box-shadow: -15px -1px 125px 30px rgba(117,43,43,0);
+                -webkit-box-shadow: -15px -1px 125px 30px rgba(117,43,43,0);
+                -moz-box-shadow: -15px -1px 125px 30px rgba(117,43,43,0);}
+        
         
         
     }
 }
 
+@keyframes aparecerMp {
+    0%{
+        transform: translateX(-90px);
+        opacity: 0;
+        filter: blur(80%);
+    }
+    100%{
+        transform: translateX(0px);
+        opacity: 1;
+        filter: blur(0%);
+    }
+}
 
+@keyframes aparecerCa {
+    0%{
+        transform: translateX(90px);
+        opacity: 0;
+        filter: blur(80%);
+    }
+    100%{
+        transform: translateX(0px);
+        opacity: 1;
+        filter: blur(0%);
+    }
+}
 
 
 @media screen and (min-width: 250px) and (max-width: 884px){
