--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,2 +1,2 @@
 /*FUENTES*/
-@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@200;300;400&family=Hind:wght@400;700&family=Prompt:ital,wght@0,200;0,300;0,400;0,500;0,600;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@200;300;400&family=Hind:wght@400;700&family=Prompt:ital,wght@0,200;0,300;0,400;0,500;0,600;1,300&family=Roboto:wght@400;500&display=swap');
