--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -20,9 +20,10 @@
     }
 .parrafosNosotros{
     margin: 0;
+    padding-top: 50px;
     .parrafo{
         color: map-get($mapa-colores, color-white );
-        font-family: $fuente-tercera;
+        font-family: $fuente-roboto;
         font-size: 1.1rem;
         font-weight: 400;
         padding-left: 0px;
@@ -33,12 +34,13 @@
         margin: 0;
         span{
             color: map-get($mapa-colores, color-naranjaClaro );
-            font-weight: 700;
+            font-weight: 500;
        
         }
     }
 }
 }
+
 
 @keyframes aparecer {
     0%{
@@ -59,6 +61,7 @@
 
 .backgroundMain{
     margin: 0;
+    
 }
 
 .contenedorParrafo{
@@ -92,7 +95,8 @@
         align-items: center;
         text-align: center;
         .parrafo{
-            padding-right: 0;
+            padding-right: 10px;
+            padding-left: 10px;
             margin: 0;
         }
     }    
