--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -6,7 +6,7 @@
 .contenedorParrafo{
     .cuartel{
         padding-bottom: 50px;
-        padding-left: 50px;
+        padding-left: 0%;
         .imagenCuartel{
             animation-name: aparecer;
             animation-duration: 2s;
