--- a/css/estilos.css
+++ b/css/estilos.css
@@ -90,7 +90,7 @@
   z-index: -10;
   background-attachment: fixed;
 }
-.backgroundMain .tituloMain, .backgroundMain .subtituloMain {
+.backgroundMain .tituloMain, .backgroundMain .bienvenidos, .backgroundMain .subtituloMain {
   font-family: "Hind", sans-serif;
   font-size: 7rem;
   font-weight: 700;
@@ -105,6 +105,19 @@
   margin-top: 10px;
   text-align: center;
   padding-top: 20px;
+}
+.backgroundMain .bienvenidos {
+  font-size: 2rem;
+  text-align: left;
+  margin-top: 0;
+  padding-top: 20px;
+  text-align: justify;
+  padding-left: 40px;
+  padding-right: 40px;
+  font-weight: 400;
+}
+.backgroundMain .bienvenidos .bienvenidosSpan {
+  color: orange;
 }
 
 .contenedorVideo {
@@ -126,13 +139,17 @@
 
 @media screen and (min-width: 250px) and (max-width: 884px) {
   /*RESPONSIVE INDEX*/
-  .backgroundMain .tituloMain, .backgroundMain .subtituloMain {
+  .backgroundMain .tituloMain, .backgroundMain .subtituloMain, .backgroundMain .bienvenidos {
     font-size: 2.5rem;
     padding-top: 80px;
   }
   .backgroundMain .subtituloMain {
-    font-size: 1rem;
+    font-size: 1.3rem;
     padding-top: 20px;
+  }
+  .backgroundMain .bienvenidos {
+    font-size: 1.5rem;
+    padding-top: 50px;
   }
   .posicionHeader {
     position: relative;
@@ -149,7 +166,7 @@
 
 .contenedorParrafo .cuartel {
   padding-bottom: 50px;
-  padding-left: 50px;
+  padding-left: 0%;
 }
 .contenedorParrafo .cuartel .imagenCuartel {
   animation-name: aparecer;
